{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 85,
  "lineage": "00bb5b12-db49-a102-8fc5-ce452888847a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "timezone_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020750790454:internet-gateway/igw-05e3cf3b4e3944770",
            "id": "igw-05e3cf3b4e3944770",
            "owner_id": "020750790454",
            "vpc_id": "vpc-0494ee4df511da79e"
          },
          "dependencies": [
            "aws_vpc.timezone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05e3cf3b4e3944770",
            "id": "r-rtb-0505f9a110f9fc0911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0505f9a110f9fc091",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.timezone_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.timezone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020750790454:route-table/rtb-0505f9a110f9fc091",
            "id": "rtb-0505f9a110f9fc091",
            "owner_id": "020750790454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e3cf3b4e3944770",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0494ee4df511da79e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.timezone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008d278f5c4e90264",
            "route_table_id": "rtb-0505f9a110f9fc091",
            "subnet_id": "subnet-04e956b4f09d35931"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.timezone_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae667daaa1af3ead",
            "route_table_id": "rtb-0505f9a110f9fc091",
            "subnet_id": "subnet-03054e9354ffecb1c"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.timezone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020750790454:security-group/sg-0712e72ea9afdc802",
            "description": "default security group",
            "egress": [],
            "id": "sg-0712e72ea9afdc802",
            "ingress": [],
            "name": "default_sg",
            "name_prefix": "",
            "owner_id": "020750790454",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0494ee4df511da79e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.timezone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020750790454:subnet/subnet-04e956b4f09d35931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e956b4f09d35931",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020750790454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0494ee4df511da79e"
          },
          "dependencies": [
            "aws_vpc.timezone_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020750790454:subnet/subnet-03054e9354ffecb1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03054e9354ffecb1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020750790454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0494ee4df511da79e"
          },
          "dependencies": [
            "aws_vpc.timezone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "timezone_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:020750790454:vpc/vpc-0494ee4df511da79e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0643dacaea1af3a81",
            "default_route_table_id": "rtb-0b45d702e59176cee",
            "default_security_group_id": "sg-0fefbd45a8ab8a6ab",
            "dhcp_options_id": "dopt-0c3010ee2a691f8a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0494ee4df511da79e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b45d702e59176cee",
            "owner_id": "020750790454"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "timezone",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "timezone",
            "metadata": [
              {
                "generation": 0,
                "name": "timezone",
                "resource_version": "15536",
                "uid": "bf700bdc-8b45-45f3-901b-db07612f6b18"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "aws_iam_role.eks-iam-role",
            "aws_subnet.public_subnet",
            "aws_vpc.timezone_vpc",
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "aws_eks_cluster.timezone-eks"
          ]
        }
      ]
    }
  ]
}